--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,20 +5,19 @@ body {
 
 .pageTopImage {
     position: relative;
+    display: inline-table;
 }
 
 .pageTopImage img {
     width: 100vw;   
     height: 80vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
+    object-fit: cover;
 } 
 
 .pageTopImage .credit-badge {
     position: absolute;
     right: 10px;
-    bottom: -250px;
+    bottom: 15px;
 }
 
 @font-face {
