--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .pageTopImage img {
-    width: 100vw;   
+    width: 100%;   
     height: 80vh;
     object-fit: cover;
 } 
@@ -68,4 +68,54 @@ body {
 	84% {background-color: #b800ff;}
 	91% {background-color: #ff00ec;}
 	100% {background-color: #ff009d;}
+}
+
+.aboutMe {
+    display: -webkit-inline-box;
+    margin-top: 50px;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 50px;
+}
+
+.aboutMe .introduction {
+    display: inherit;
+}
+
+.circleImage {
+    display:block;
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    overflow: hidden;
+    padding:5px 4px;
+}
+
+.circleImage img {
+    width: 290px;
+    transform: rotate(-90deg);
+    margin-top: 16px; 
+    margin-left: -52px; 
+}
+
+.aboutMe p {
+    word-wrap: break-word;
+    text-align: justify;
+    margin-top: 5%;
+    margin-left: 5%;
+    margin-right: 20%;
+    font-family: 'Mada', sans-serif;
+}
+
+.aboutMe .seeMore {
+    display: inline-block;
+    position: absolute;
+    right: 16%;
+}
+
+.aboutMe .seeMore a {
+    font-size: 25px;
+    color: #778899;
+    text-decoration: none;
+    font-family: 'Mada', sans-serif;
 }
