--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,18 +3,18 @@ body {
     margin: 0px;
 }
 
-.pageTopImage {
+.page-top-image {
     position: relative;
     display: inline-table;
 }
 
-.pageTopImage img {
+.page-top-image img {
     width: 100%;   
     height: 80vh;
     object-fit: cover;
 } 
 
-.pageTopImage .credit-badge {
+.page-top-image .credit-badge {
     position: absolute;
     right: 10px;
     bottom: 15px;
@@ -27,7 +27,7 @@ body {
   src: local('Lemon Regular'), local('Lemon-Regular'), url(http://fonts.gstatic.com/s/lemon/v5/WRZq1AYYveIOSocZAeAyAw.ttf) format('truetype');
 }
 
-.pageTopImage .greetings {
+.page-top-image .greetings {
     width: 395px;
 	height: 67px;
 	background-color: #f00;
@@ -43,7 +43,7 @@ body {
 	text-align: center;
 }
 
-.pageTopImage .greetings h1 {
+.page-top-image .greetings h1 {
     color: white;
     font-size: 40px;
     text-align: center;
@@ -70,19 +70,19 @@ body {
 	100% {background-color: #ff009d;}
 }
 
-.aboutMe {
+.about-me {
     display: -webkit-inline-box;
-    margin-top: 50px;
+    margin-top: 55px;
     margin-left: 10%;
     margin-right: 10%;
     margin-bottom: 50px;
 }
 
-.aboutMe .introduction {
+.about-me .introduction {
     display: inherit;
 }
 
-.circleImage {
+.circle-image {
     display:block;
     width: 180px;
     height: 180px;
@@ -91,31 +91,123 @@ body {
     padding:5px 4px;
 }
 
-.circleImage img {
+.circle-image img {
     width: 290px;
     transform: rotate(-90deg);
     margin-top: 16px; 
     margin-left: -52px; 
 }
 
-.aboutMe p {
+.about-me p {
     word-wrap: break-word;
     text-align: justify;
     margin-top: 5%;
     margin-left: 5%;
-    margin-right: 20%;
+    margin-right: 25%;
     font-family: 'Mada', sans-serif;
 }
 
-.aboutMe .seeMore {
+.about-me .see-more {
     display: inline-block;
     position: absolute;
     right: 16%;
 }
 
-.aboutMe .seeMore a {
+.about-me .see-more a {
     font-size: 25px;
     color: #838383;
     text-decoration: none;
     font-family: 'Mada', sans-serif;
+}
+
+.project-header h1 {
+    margin-top: 50px;
+    text-align: center;
+    font-family: 'Mada', sans-serif;
+    color: #ababab;
+    font-weight: normal;
+}
+
+.content-align-center {
+    text-align: left;
+    margin-left: 8%;
+    margin-right: 8%;
+}
+
+.project-card-beacon-compact {
+    position: relative;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 35px;
+    display: inline-block;
+}
+
+.project-card-beacon {
+    overflow: hidden;
+    position: relative;
+    max-width: 25rem;
+}
+
+.project-card {
+    background: #fff;
+    -webkit-appearance: none;
+}
+
+.project-card .project-card-ico {
+    display: flex;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 64%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-left: 1px solid #D0D8D8;
+    border-top: 1px solid #D0D8D8;
+    border-right: 1px solid #D0D8D8;
+    border-top-left-radius: .3125rem;
+    border-top-right-radius: .3125rem;
+    object-fit: cover;
+    -webkit-box-pack: center;
+    justify-content: center;
+    align-content: center;
+}
+
+.project-card-ico img {
+    height: 200px;
+}
+
+.project-card-beacon .project-card-details {
+    margin-top: 0;
+    width: 100%;
+    height: 0;
+    display: flex;
+    position: relative;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    transition: all .1s ease-in-out;
+    padding: 0 0 30%;
+    font-size: .875rem;
+    border-left: 1px solid #D0D8D8;
+    border-right: 1px solid #D0D8D8;
+    border-bottom: 1px solid #D0D8D8;
+    border-bottom-left-radius: .3125rem;
+    border-bottom-right-radius: .3125rem;
+}
+
+.project-card-beacon-compact .project-card-details h3 {
+    color: #ababab;
+    align-items: center;
+    font-size: 200%;
+    font-family: 'Mada', sans-serif;
+    font-weight: normal;
+    margin-top: 25%;
+    text-decoration: none;
+    height: inherit;
+}
+
+.content-align-center .project-card a {
+    text-decoration: none;
 }
