--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,3 +252,29 @@ body {
     padding-left: 5px;
     padding-right: 5px;
 }
+
+.project {
+    margin-left: 10%;
+    margin-top: 5px;
+    margin-right: 10%;
+    display: -webkit-inline-box;
+}
+
+.project-image {
+    border-radius: 2px;
+}
+
+.project-image img {
+    width: 45vh;
+}
+
+.project-description {
+    width: 100vh;
+    margin-left: 70px;
+}
+
+.project-description p {
+    font-family: 'Mada', sans-serif;
+    word-wrap: break-word;
+    text-align: justify;
+}
