--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
-    display: block;
     margin: 0px;
+    display: block;
 }
 
 .page-top-image {
@@ -30,17 +30,17 @@ body {
 .page-top-image .greetings {
     width: 395px;
 	height: 67px;
+	margin-left: 69px;
+	margin-top: -367px;
+	position: relative;
+	text-align: center;
+	border-radius: 10px;
 	background-color: #f00;
 	-webkit-animation-name: rgb-animation; /* Safari 4.0 - 8.0 */
 	-webkit-animation-duration: 30s; /* Safari 4.0 - 8.0 */
 	animation-name: rgb-animation;
 	animation-duration: 30s;
 	animation-iteration-count: infinite;
-	border-radius: 10px;
-	position: relative;
-	margin-left: 69px;
-	margin-top: -367px;
-	text-align: center;
 }
 
 .page-top-image .greetings h1 {
@@ -71,11 +71,11 @@ body {
 }
 
 .about-me {
-    display: -webkit-inline-box;
     margin-top: 55px;
     margin-left: 10%;
     margin-right: 10%;
     margin-bottom: 50px;
+    display: -webkit-inline-box;
 }
 
 .about-me .introduction {
@@ -238,9 +238,9 @@ body {
 }
 
 .right-footer {
+    margin-top: 40px;
     position: absolute;
     right: 30px;
-    margin-top: 40px;
 }
 
 .right-footer a {
@@ -277,4 +277,45 @@ body {
     font-family: 'Mada', sans-serif;
     word-wrap: break-word;
     text-align: justify;
+}
+
+.project-links {
+    width: 380px;
+    margin-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    text-align: center;
+}
+
+.project-links a {
+    margin-left: 10px;
+    margin-right: 10px;
+    text-decoration: none;
+    color: whitesmoke;
+}
+
+.project-link {
+    width: 165px;
+    height: 60px;
+    border-radius: 25px;
+    border: 2px solid #18ACDB;
+    background-color: #18ACDB;
+    font-family: 'Mada', sans-serif;
+}
+
+.project-link h1 {
+    margin-top: 10px;
+}
+
+.project-github-link {
+    width: 165px;
+    height: 60px;
+    border-radius: 25px;
+    border: 2px solid #95989A;
+}
+
+.project-github-link img {
+    width: 20vh;
+    margin: 5px; 
 }
