--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ body {
     font-family: 'Mada', sans-serif;
 }
 
-.project-header h1 {
+.title-center h1 {
     margin-top: 50px;
     text-align: center;
     font-family: 'Mada', sans-serif;
