--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,8 +326,24 @@ body {
     margin-top: 4%;
     margin-left: 10%;
     margin-right: 10%;
+    margin-bottom: 5%;
     text-align: justify;
     word-wrap: break-word;
+    font-family: 'Mada', sans-serif;
+    color: #646464;
+}
+
+.credits {
+    margin-top: 30px;
+    margin-left: 10%;
+}
+
+.credits h4 {
+    font-family: 'Mada', sans-serif;
+    color: #646464;
+}
+
+.credits p {
     font-family: 'Mada', sans-serif;
     color: #646464;
 }
