--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,10 @@ body {
     font-family: 'Mada', sans-serif;
 }
 
+.title-center {
+    margin-top: 5px;
+}
+
 .title-center h1 {
     margin-top: 50px;
     text-align: center;
